--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,11 @@
     "description": "N/A",
     "require": {
         "magento/framework": "103.*",
-		"alekseon/custom-forms-builder": "102.*",
+		"alekseon/custom-forms-builder": "^102.0.7",
         "alekseon/widget-forms-re-captcha": "100.*"
     },
     "type": "magento2-module",
-    "version": "102.0.18",
+    "version": "102.0.19",
     "license": [
         "OSL-3.0",
         "AFL-3.0"
