--- a/.github/workflows/m2-actions-test.yml
+++ b/.github/workflows/m2-actions-test.yml
@@ -22,8 +22,8 @@ jobs:
           - 9200:9200
         options: -e="discovery.type=single-node" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
     steps:
-      - uses: actions/checkout@v3
-
+      #- uses: actions/checkout@v3
+      - run: composer require alekseon/widget-forms
    
       #- name: 'install fresh magento repo without credentials'
       #  if: ${{true}}
