phpstan & mess detector

--- a/.github/workflows/m2-actions-test.yml
+++ b/.github/workflows/m2-actions-test.yml
@@ -54,18 +54,18 @@ jobs:
       #    unit_test_subset_path: '../Madit/Sips2'
       #    elasticsearch: 1
           
-      #- name: 'phpstan'
-      #  uses: MAD-I-T/magento-actions@master
-      #  with:
-      #    process: 'phpstan'
-      #    exec_path: '../Madit/Sips2/'
+      - name: 'phpstan'
+        uses: MAD-I-T/magento-actions@master
+        with:
+          process: 'phpstan'
+          exec_path: '../module-code/'
           
-      #- name: 'mess detector'
-      #  if: always()
-      #  uses: MAD-I-T/magento-actions@v3.18
-      #  with:
-      #    process: 'mess-detector'
-      #    md_src_path: '../Madit/Sips2/'
+      - name: 'mess detector'
+        if: always()
+        uses: MAD-I-T/magento-actions@v3.18
+        with:
+         process: 'mess-detector'
+         md_src_path: '../module-code/'
 
       - name: 'phpcs testing'
         if: always()
