--- a/.github/workflows/coding-standard.yml
+++ b/.github/workflows/coding-standard.yml
@@ -6,7 +6,7 @@ jobs:
     name: M2 Code Analysis
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: extdn/github-actions-m2/magento-coding-standard/8.1@master
         with:
           phpcs_severity: 10
@@ -16,14 +16,14 @@ jobs:
     name: M2 Mess Detection
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: extdn/github-actions-m2/magento-mess-detector@master
 
   phpstan:
     name: M2 PHPStan
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: extdn/github-actions-m2/magento-phpstan@master
+      - uses: actions/checkout@v4
+      - uses: extdn/github-actions-m2/magento-phpstan/8.3@master
         with:
           composer_name: alekseon/widget-forms
